--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="">WebStudio</a>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
+                <li><a href="/index.html">Студія</a></li>
+                <li><a href="/portfolio.html">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -33,29 +38,34 @@
 
         <!-- Чим ми займаємося -->
         <section>
+            <h2>Послуги</h2>
             <ul>
                 <li>
-                    <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h2>ПЛАНУВАННЯ</h2>
+                    <h3>ПЛАНУВАННЯ</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
-
+        </section>
+        <!-- Приклади -->
+        <section>
             <h2>Чим ми займаємося</h2>
-            <img src="./images/direction1.jpg" alt="напрям один" width="370">
-            <img src="./images/direction2.jpg" alt="напрям два"  width="370">
-            <img src="./images/direction3.jpg" alt="напрям три" width="370">
+            <ul>
+                <li><img src="./images/direction1.jpg" alt="напрям один" width="370"></li>
+                <li><img src="./images/direction2.jpg" alt="напрям два" width="370"></li>
+                <li><img src="./images/direction3.jpg" alt="напрям три" width="370"></li>
+            </ul>
         </section>
 
         <!-- Наша команда -->
@@ -63,22 +73,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igor.jpg" alt="" width="270">
+                    <img src="./images/igor.jpg" alt="перший член команди" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/olga.jpg" alt="" width="270">
+                    <img src="./images/olga.jpg" alt="другий член команди" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/mykola.jpg" alt="" width="270">
+                    <img src="./images/mykola.jpg" alt="третій член команди" width="270">
                     <h3>Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mykhailo.jpg" alt="" width="270">
+                    <img src="./images/mykhailo.jpg" alt="четвертий член команди" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -86,20 +96,21 @@
         </section>
     </main>
     <footer>
-        <ul>
-            <li>
-                <a href="">WebStudio</a>
-            </li>
-            <li>
-                <address>м. Київ, пр-т Лесі Українки, 26</address>
-            </li>
-            <li>
-                <a href="">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        <a href="./index.html">WebStudio</a>
+        <address>
+            <ul>
+                <li>
+                    <a href="https://www.google.com/maps/place/%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8+7/@50.4340225,30.5316546,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cfd612e83011:0x87edecf81f4151b6!8m2!3d50.4340225!4d30.5316546">м.
+                        Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
 
